--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -31,7 +31,7 @@ RANLIB		= @RANLIB@
 INSTALL		= @INSTALL@
 
 OBJS		= checksum.o ip_fragment.o ip_options.o killtcp.o \
-		  libnids.o scan.o tcp.o util.o allpromisc.o hash.o
+		  libnids.o scan.o tcp.o util.o allpromisc.o hash.o fifo.o
 OBJS_SHARED	= $(OBJS:.o=_pic.o)
 .c.o:
 	$(CC) -c $(CFLAGS) -I. $(LIBS_CFLAGS) $<
@@ -59,6 +59,8 @@ allpromisc_pic.o: allpromisc.c
 	$(CC) -fPIC $(CFLAGS) -I. $(LIBS_CFLAGS) -c allpromisc.c -o $@
 hash_pic.o: hash.c
 	$(CC) -fPIC $(CFLAGS) -I. $(LIBS_CFLAGS) -c hash.c -o $@
+fifo_pic.o: fifo.c
+	$(CC) -fPIC $(CFLAGS) -I. $(LIBS_CFLAGS) -c fifo.c -o $@
 
 
 $(LIBSTATIC): $(OBJS)
